--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "emoji-picker-react": "^4.4.10",
+    "encoding": "^0.1.13",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "firebase": "^10.1.0",
     "next": "13.4.12",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-icons": "^4.10.1",
+    "react-moment": "^1.1.3",
+    "react-simple-image-viewer": "^1.2.2",
+    "react-toastify": "^9.1.3",
+    "tailwindcss": "3.3.3",
+    "uuid": "^9.0.0"
   }
 }
